# reefscaperos

./: startcmd.sh  vikings.service
install/: local_setup.sh  setup.sh
src/: commondeps.cmake
src/apriltags/: CMakeLists.txt  package.xml
src/apriltags/lib/: version.txt
src/apriltags/src/: ntsender.cpp  sample_node.cpp
src/mypkg/: CMakeLists.txt  package.xml
src/mypkg/include/mypkg/: stupid.h
src/mypkg/src/: autosquare.cpp  dummynode.cpp  func.cpp  motor.cpp
src/reefscape_testing/: CMakeLists.txt  package.xml
src/reefscape_testing/src/: run_motor.cpp
src/robotcomm/: CMakeLists.txt  package.xml
src/robotcomm/include/robotcomm/: status_node.h  xbox_node.h
src/robotcomm/msg/: Xbox.msg
src/robotcomm/src/: robotcomm.cpp  status_node.cpp  xbox_node.cpp
src/swerve/: CMakeLists.txt  package.xml
src/swerve/include/swerve/: swerve.h  swerve_constants.h  swerve_module.h  swerve_node.h
src/swerve/src/: swerve.cpp  swerve_module.cpp  swerve_node.cpp
src/vikings_msgs/: CMakeLists.txt  package.xml
src/vikings_msgs/srv/: DriveSwerve.srv
